[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask-admin = "^1.6.1"
openai = "^0.28.0"
flask-sqlalchemy = "^3.1.1"
numpy = "^1.26.0"
flask-login = "^0.6.2"
flask-migrate = "^4.0.5"
flask = "^2.3.3"
requests = "^2.31.0"
werkzeug = "^2.3.7"
cohere = "4.26.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"